style.css
@font-face {
    font-family: myFont;
    src: url(fonts/Lato-Regular.ttf);
}
@font-face {
    font-family: h3Font;
    src: url(fonts/Lato-Black.ttf);
}
body {
    font-family: myFont, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    padding: 30px 20px;
    display: flex;
    flex-direction: column;
    gap: 30px;
    margin: 0px;
    box-sizing: border-box;
    background-color: peachpuff;
    color: black;
}
.headContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    gap: 10px;
}
.headContainer h3 {
    font-size: 2.2rem;
    padding: 0px;
    margin: 0px;
    font-family: h3Font, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.headContainer input[type="search"] {
    width: max(40%, 40ch);
    padding: 2px 10px;
    appearance: none;
    color: black;
    font-size: 0.9rem;
    margin: 0px;
    background-color: peachpuff;
    outline: none;
    border: 1px solid black;
    border-radius: 10px;
    height: 30px;
}


.midContainer {
    width: 100%;
    height: 15%;
    display: flex;
    flex-wrap: wrap;
    padding: 10px 40px;
    box-sizing: border-box;
    justify-content: space-between;
    gap: 20px;
    background-color: white;
    color: black;
    border-radius: 10px;
    box-shadow: 5px 2px 3px 0.5px darkgrey;

}
.addBook {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 20px 0;
    width: max(500px, 40%);
}
.addBook h4 {
    font-size: 2rem;
    padding: 0px;
    margin: 0px;
}
.addBook p {
    font-size: 1.5rem;
    padding: 0px;
    margin: 0px;
}
.addBook button {
    background-color: #38bdf8;
}
.addBook button, button {
    width: fit-content;
    padding: 10px 20px;
    background-color: peachpuff;
    color: black;
    font-size: 1rem;
    font-weight: bolder;
    border-radius: 10px;
    border: 1px solid peachpuff;
}
.imgContainer {
    height: 100%;
    padding: 0px;
    margin: 0px;
    text-align: center;
}
.imgContainer a {
    font-size: 0.5rem;
    font-style: italic;
}
.imgContainer img {
    height: 100%;
    width: 100%;
}


.bookContainer {
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.editContainer {
    width: 100%;
    display: flex;
    justify-content: space-between;
}
.edit {
    background-color: black;
    color: peachpuff;
}
.bookContainer h3 {
    font-size: 1.7rem;
    color: black;
    padding: 0px;
    margin: 0px;
}

.books {
    width: 100%;
    display: flex;
    gap: 10px;
    flex-wrap: wrap;
}
.one {
    width: max(250px, 25%);
    height: fit-content;
    box-sizing: border-box;
    display: flex;
    gap: 20px;
    padding: 10px;
    flex-direction: column;
    background-color: black;
    color: peachpuff;
    border-radius: 10px;
    text-align: center;
    box-shadow: 5px 2px 3px 0.5px darkgrey;
}
.one img {
    width: 100%;
    height: 60%;
}
.one > div {
    padding: 0px 10px;
    width: 100%;
    box-sizing: border-box;
    margin: 0px;
    display: flex;
    text-align: center;
    gap: 10px;
    justify-content: space-between;
}
.one p, .one button {
    margin: 0px;
    font-weight: bolder;
    font-size: 0.8rem;
    padding: 10px 0px;
    border-bottom: 1px solid peachpuff;
}
.one div div {
    width: 100%;
    display: flex;
    gap: 5px;
    box-sizing: border-box;
    justify-content: space-between;
}
.one button {
    padding: 5px 10px;
}
.formContainer {
    margin: auto;
    position: absolute;
    top: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    visibility: hidden;
    z-index: 99;
    backdrop-filter: blur(3px);
    
}
.modal {
    visibility: visible;
    width: 100%;
    height: 100%;
    position: fixed;
}
form {
    width: fit-content;
    height: fit-content;
    padding: 20px 30px;
    border-radius: 10px;
    background-color: white;
    color: black;
    display: flex;
    flex-direction: column;
    gap: 20px;
    font-size: 1rem;
}
input[type="text"], input[type="number"] {
    width: 35ch;
    padding: 5px;
    color: black;
    font-size: 0.9rem;
    margin: 0px;
    background-color: white;
    outline: none;
    border: 1px solid black;
    border-radius: 5px;
}
fieldset {
    border-radius: 10px;
    border: 1px solid black;
    outline: none;
    padding: 10px;
}
form div {
    display: flex;
    justify-content: space-between;
}

form button {
    width: fit-content;
    padding: 10px 20px;
    background-color: white;
    color: black;
    font-size: 1rem;
    letter-spacing: 2px;
    border-radius: 10px;
    border: 1px solid black;
    margin: auto;
}

